--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 
 	<some-el></some-el>
 
-	<script type="text/javascript" src="/public/js/bundle.js"></script>
+	<script type="text/javascript" src="./js/bundle.js"></script>
 	<script type="text/javascript">
 		window._injectedData = JSON.parse('["data_replace"]');
 	</script>
