--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,8 @@
 	<title>Rebasecamp</title>
 </head>
 <body ng-app="base">
-
 	<some-el></some-el>
-
+	<script type="text/javascript" src = "./libs/updatebrowserInit.js"></script>
 	<script type="text/javascript" src="./js/bundle.js"></script>
 	<script type="text/javascript">
 		window._injectedData = JSON.parse('["data_replace"]');
