--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 	<title>Rebasecamp</title>
 	<link rel="stylesheet" href="./libs/css/alertify.min.css">
 	<link rel="stylesheet" href="./libs/css/default.min.css">
+	<link rel="stylesheet" href="libs/css/font-awesome.min.css">
 </head>
 <body ng-app="base">
 	<root-element></root-element>
