--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="libs/css/font-awesome.min.css">
 </head>
 <body ng-app="base">
+    <menu-component></menu-component>
 	<root-element></root-element>
 
 	<script type="text/javascript" src = "./libs/js/updatebrowserInit.js"></script>
