--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="libs/css/flexboxgrid.min.css">
 </head>
 <body ng-app="base">
+	<header-component></header-component>
     <menu-component></menu-component>
 	<root-element></root-element>
 
