--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./libs/css/default.min.css">
     <link rel="stylesheet" href="libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/css/flexboxgrid.min.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="libs/css/main.css">
 </head>
 
 <body ng-app="base">
