--- a/public/_index.html
+++ b/public/_index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/css/flexboxgrid.min.css">
     <link rel="stylesheet" href="libs/css/main.css">
+    <link rel="stylesheet" href="libs/css/bootstrap.min.css">
+
 </head>
 
 <body ng-app="base">
