styl daily calendar

--- a/public/_index.html
+++ b/public/_index.html
@@ -16,7 +16,7 @@
 
 <body ng-app="base">
     <header-component></header-component>
-    <!--<menu-component></menu-component>-->
+    <menu-component></menu-component>
     <root-element></root-element>
 
     <script type="text/javascript" src="./libs/js/updatebrowserInit.js"></script>
