--- a/public/_index.html
+++ b/public/_index.html
@@ -22,6 +22,8 @@
     <script type="text/javascript" src="./libs/js/updatebrowserInit.js"></script>
     <script type="text/javascript" src="./libs/js/alertify.min.js"></script>
     <script type="text/javascript" src="./js/bundle.js"></script>
+    <script src="//cdn.ckeditor.com/4.5.6/standard/ckeditor.js"></script> 
+    <script src="libs/js/angular-sanitize.js"></script>
     <script type="text/javascript">
         window._injectedData = JSON.parse('["data_replace"]');
     </script>
