menu interface update, select project update Signed-off-by: AnthStep <lightlife25@gmail.com>

--- a/public/_index.html
+++ b/public/_index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./libs/css/default.min.css">
     <link rel="stylesheet" href="libs/css/font-awesome.min.css">
     <link rel="stylesheet" href="libs/css/flexboxgrid.min.css">
-    <link rel="stylesheet" href="libs/css/main.css">
+    <link rel="stylesheet" href="./libs/css/main.css">
     <link rel="stylesheet" href="libs/css/bootstrap.min.css">
     <meta name="viewport" content="width=device-width">
 
