#217 - new multi select

--- a/public/_index.html
+++ b/public/_index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./libs/css/main.css">
     <link rel="stylesheet" href="libs/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://team.binary-studio.com/app/styles/css/style.css">
+    <link rel="stylesheet" href="libs/css/isteven-multi-select.css">
     <meta name="viewport" content="width=device-width">
 </head>
 
@@ -28,6 +29,7 @@
     <script type="text/javascript" src="libs/js/angular-sanitize.js"></script>
     <script type="text/javascript" src="http://team.binary-studio.com/app/javascripts/header.js"></script>
     <script type="text/javascript" src="libs/js/header-main.js"></script>
+    <script type="text/javascript" src="libs/js/isteven-multi-select.js"></script>
     <script type="text/javascript">
         window._injectedData = JSON.parse('["data_replace"]');
     </script>
